# rust-template

./: Cargo.toml  cargo-generate.toml
src/: config.rs  env.rs  error.rs  lib.rs  main.rs  prelude.rs
