[package]
name = "{{ project-name }}"
version = "0.1.0"
edition = "2024"
authors = ["{{ authors }}"]
{% if description != "" %}description = "{{ description }}"{% endif %}

[dependencies]
dotenvy = "0.15.7"
thiserror = "2.0.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xdg = "2.5.2"
